@@ -117,13 +117,6 @@ replace {
 } if notUsed('a')
 
 replace {
-	inc hl
-	dec hl
-} by {
-	; gbz80 peephole 6 removed inc hl / dec hl pair
-}
-
-replace {
 	ld	(hl), a
 	inc	%2
 	ld	a, (%2)
@@ -269,7 +262,7 @@ replace {
 } by {
 	; gbz80 peephole 17a pushed double `xor a` fast
 	xor	a, a
-	rra
+	rrca
 	push	af
 	xor	a, a
 }
@@ -403,38 +396,36 @@ replace {
 } if notUsed('sp')
 
 replace {
-	inc	sp
-} by {
-	; peephole sp4 removed not needed inc sp
-} if notUsed('sp')
-
-replace {
-	dec	sp
-} by {
-	; peephole sp5 removed not needed dec sp
-} if notUsed('sp')
-
-replace {
 	pop	%1
 } by {
 	; peephole sp6 removed not needed pop
 } if notUsed(%1), notUsed('sp')
 
+// for 2B it wouldn't be worth it
 replace {
+	inc	sp
 	inc	sp
 	inc	sp
 } by {
 	; peephole sp7 increased SP by addition
-	add	sp, #2
+	add	sp, #3
 } if notUsed('f')
 
 replace restart {
 	add	sp, #%1
 	inc	sp
 } by {
-	; peephole sp8 increased SP by addition
+	; peephole sp8a increased SP by addition
 	add	sp, #%2
 } if immdInRange(-128 127 '+' %1 1 %2), notUsed('hf' 'cf')
+
+replace restart {
+	inc	sp
+	add	sp, #%1
+} by {
+	; peephole sp8b increased SP by addition
+	add	sp, #%2
+} if immdInRange(-128 127 '+' %1 1 %2)
 
 replace restart {
 	add	sp, #%1
@@ -444,26 +435,34 @@ replace restart {
 	add	sp, #%3
 } if immdInRange(-128 127 '+' %1 %2 %3), notUsed('hf' 'cf')
 
+// only handle stack adjustment after calls to not 
+// disturb detection of unitialized reads in emulators
 replace {
+	call	%2
 	add	sp, #%1
 } by {
+	call	%2
 	; peephole sp10a increased SP by %1 through pop
 	pop	%3
 } if immdInRange(2 2 '+' %1 0 %2), unusedReg(%3 'bc' 'de' 'hl'), notUsed('f')
 
 // unusedReg does not support 'af'
 replace {
+	call	%2
 	add	sp, #%1
 } by {
+	call	%2
 	; peephole sp10b increased SP by %1 through pop
 	pop	af
 } if immdInRange(2 2 '+' %1 0 %2), notUsed('af')
 
 // if f was used
 replace {
+	call	%2
 	inc	sp
 	inc	sp
 } by {
+	call	%2
 	; peephole sp10c increased SP by 2 through pop
 	pop	%3
 } if unusedReg(%3 'bc' 'de' 'hl')
