@@ -1,3 +1,11 @@
+2021-04-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* src/z80/gen.c,
+	  src/z80/peeph-gbz80.def,
+	  src/z80/peeph.def:
+	  Don't emit pop/push for stack adjustment on sm83.
+	  (For easier detection of uninitialized memory)
+
 2021-04-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
